fix overflow-x on mobile

--- a/app/assets/stylesheets/rouge.scss
+++ b/app/assets/stylesheets/rouge.scss
@@ -6,6 +6,7 @@ div.highlight {
   border-radius: 8px;
   padding: 15px 20px;
   overflow-x: scroll;
+  -webkit-overflow-scrolling: touch;
   background-color: #666;
   code {
     padding: 0;
